# substrate-node-template

./: .envrc  .gitignore  .gitpod.yml  CODEOWNERS  Cargo.toml  Containerfile  Dockerfile  Dockerfile.build  Makefile  README.md  build.Dockerfile  chain-spec-plain.json  chain-spec.json  customSpec.json  customSpecRaw.json  docker-compose.yml  flake.nix  index.html  init-node-server.sh  lib.rs  rust-setup.md  rust-toolchain.toml  setup.md  shell.nix  spec.json  types.json
.devcontainer/: Dockerfile  devcontainer.json  updateContentCommand.sh
.github/ISSUE_TEMPLATE/: report-a-bug.md
.github/workflows/: build-publish-image.yml  check.yml  cicd.yml  onfinality-network-spec-update  onfinality-network-spec-update.yml  release.yml  test.yml
chain-specifications/: testnet.json  testnetRaw.json
common/: Cargo.toml
common/src/: lib.rs  primitives.rs
doc/: rust-setup.md
docs/: rust-setup.md  test-guide.md
frameless-runtime/: Cargo.toml
frameless-runtime/src/: lib.rs
node/: Cargo.toml
node/runtime/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/Membership/: Cargo.toml
pallets/Membership/src/: lib.rs
pallets/Rewards/: Cargo.toml
pallets/Rewards/src/: lib.rs
pallets/backup/: Cargo.toml
pallets/backup/src/: lib.rs
pallets/calculator/: Cargo.toml
pallets/calculator/src/: lib.rs
pallets/citizenship/: Cargo.toml
pallets/citizenship/src/: lib.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/credential/: Cargo.toml  types.json
pallets/credential/src/: lib.rs
pallets/crowdfund/: Cargo.toml
pallets/crowdfund/src/: lib.rs
pallets/dex/: Cargo.toml  README.md
pallets/dex/runtime-api/: Cargo.toml
pallets/dex/runtime-api/src/: lib.rs
pallets/dex/src/: functions.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/docsig/: Cargo.toml
pallets/docsig/src/: lib.rs
pallets/docusign/: Cargo.toml
pallets/docusign/src/: lib.rs
pallets/exchange/: Cargo.toml
pallets/exchange/src/: lib.rs
pallets/groupmembership/: Cargo.toml
pallets/groupmembership/src/: lib.rs  tests.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: lib.rs
pallets/marketplace/: Cargo.toml  README.md
pallets/marketplace/src/: lib.rs  types.rs
pallets/mbkm-mitra/: Cargo.toml
pallets/mbkm-mitra/src/: lib.rs
pallets/medical-encryption/: Cargo.toml
pallets/medical-encryption/src/: lib.rs  mock.rs  tests.rs
pallets/medical-record/: Cargo.toml
pallets/medical-record/src/: lib.rs  mock.rs  tests.rs
pallets/membershipset/: Cargo.toml
pallets/membershipset/src/: lib.rs  mock.rs  tests.rs
pallets/mo/: Cargo.toml
pallets/mo/src/: lib.rs
pallets/mypallet/: Cargo.toml
pallets/mypallet/src/: lib.rs  mock.rs  tests.rs
pallets/note/: Cargo.toml
pallets/note/src/: lib.rs  tests.rs
pallets/poe/: Cargo.toml  info.md
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/post/: Cargo.toml  types.json
pallets/post/src/: lib.rs
pallets/primitives/: Cargo.toml
pallets/primitives/src/: lib.rs
pallets/proofs/: Cargo.toml
pallets/proofs/src/: lib.rs
pallets/proofs2/src/: lib.rs
pallets/structstorage/: Cargo.toml
pallets/structstorage/src/: lib.rs
pallets/subscription/: Cargo.toml
pallets/subscription/src/: functions.rs  lib.rs
pallets/substratee-registry/: Cargo.toml
pallets/substratee-registry/host-calls/: Cargo.toml
pallets/supply-chain-management/: Cargo.toml
pallets/supply-chain-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
pallets/test_evm/: Cargo.toml
pallets/test_evm/src/: lib.rs  mock.rs
pallets/token/: Cargo.toml  types.json
pallets/token/src/: lib.rs
pallets/veles/: Cargo.toml
pallets/veles/src/: lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/module-template/: Cargo.toml
runtime/module-template/src/: lib.rs
runtime/src/: constants.rs  lib.rs
runtime/tests/: integration.rs
scripts/: docker_run.sh  init.sh
