[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ba43ca16ee4c9eb45f6eec04ebf50f38b6dd6db7'
[profile.release]
panic = 'unwind'

[[bin]]
name = 'node-template'
path = 'src/main.rs'

[workspace]
members = ['runtime']

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'
