[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
# pallet-staking = { path = '../../../../paritytech/substrate/frame/staking', default-features = false }
pallet-staking = { version = '3.0.0', default-features = false }
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '3.0.0' }

# Substrate dependencies
codec = { version = '2.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-authorship = { version = '3.0.0', default-features = false }
pallet-authority-discovery = { version = '3.0.0', default-features = false }
pallet-babe = { version = '3.0.0', default-features = false }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-collective = { version = '3.0.0', default-features = false }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-im-online = { version = '3.0.0', default-features = false }
pallet-indices = { version = '3.0.0', default-features = false }
pallet-offences = { version = '3.0.0', default-features = false }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-session = { version = '3.0.0', default-features = false }
# pallet-staking = { version = '3.0.0', default-features = false }
pallet-staking-reward-curve = { version = '3.0.0', default-features = false }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-authority-discovery = { version = '3.0.0', default-features = false }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-babe = { version = '0.9.0', default-features = false }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { version = '3.0.0', default-features = false }
sp-staking = { version = '3.0.0', default-features = false }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-authorship/std',
    'pallet-authority-discovery/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-collective/std',
    'pallet-grandpa/std',
    'pallet-indices/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
    'pallet-staking/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-authority-discovery/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
