[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-kitties'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2021-08'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '4.0.0-dev' }
frame-support = { default-features = false, version = '4.0.0-dev' }
frame-benchmarking = { default-features = false, optional = true, version = '4.0.0-dev' }
sp-std = { default-features = false, version = '4.0.0-dev' }
pallet-randomness-collective-flip = { default-features = false, version = '4.0.0-dev' }
pallet-balances = { default-features = false, version = '4.0.0-dev' }
sp-core = { default-features = false, version = '4.0.0-dev' }
serde = { version = "1.0.119" }

[dev-dependencies]
sp-io = { default-features = false, version = '4.0.0-dev' }
sp-runtime = { default-features = false, version = '4.0.0-dev' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'pallet-randomness-collective-flip/std',
	'sp-core/std',
	'serde/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
try-runtime = ['frame-support/try-runtime']
