[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template'
version = '2.0.0'
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1b42f2499bd9702fc7413abfe813faf11e94a0ad'
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1b42f2499bd9702fc7413abfe813faf11e94a0ad'
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1b42f2499bd9702fc7413abfe813faf11e94a0ad'
version = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
]
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '1b42f2499bd9702fc7413abfe813faf11e94a0ad'
version = '2.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '1b42f2499bd9702fc7413abfe813faf11e94a0ad'
version = '2.0.0'
